--- a/Bookshelf/Views/AddUser.xaml
+++ b/Bookshelf/Views/AddUser.xaml
@@ -16,17 +16,33 @@
                     <!--<Image SemanticProperties.Description="Criar Usuário" HeightRequest="30" WidthRequest="80" Source="user_plus_solid_30.png" />-->
 
                     <Label Text="Nome" Style="{StaticResource LblEntry}" />
-                    <Entry Style="{StaticResource Entry}" Text="{Binding Name}" MaxLength="150" MaximumWidthRequest="350" MinimumWidthRequest="250" Keyboard="Name"  />
-                    
+                    <Border MaximumWidthRequest="350" MinimumWidthRequest="250">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="5" />
+                        </Border.StrokeShape>
+                        <Entry Style="{StaticResource Entry}" Text="{Binding Name}" MaxLength="150" MaximumWidthRequest="350" MinimumWidthRequest="250" Keyboard="Name"  />
+                    </Border>
                     <Label Text="Email" Style="{StaticResource LblEntry}" />
-                    <Entry Style="{StaticResource Entry}" Text="{Binding Email}" MaxLength="150" MaximumWidthRequest="350" MinimumWidthRequest="250" Keyboard="Email"  />
-
+                    <Border MaximumWidthRequest="350" MinimumWidthRequest="250">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="5" />
+                        </Border.StrokeShape>
+                        <Entry Style="{StaticResource Entry}" Text="{Binding Email}" MaxLength="150" MaximumWidthRequest="350" MinimumWidthRequest="250" Keyboard="Email"  />
+                    </Border>
                     <Label Text="Senha" Style="{StaticResource LblEntry}" />
-                    <Entry IsPassword="True" Style="{StaticResource Entry}" Text="{Binding Password}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25" />
-
+                    <Border MaximumWidthRequest="250" MinimumWidthRequest="150">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="5" />
+                        </Border.StrokeShape>
+                        <Entry IsPassword="True" Style="{StaticResource Entry}" Text="{Binding Password}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25" />
+                    </Border>
                     <Label Text="Confirmação da senha" Style="{StaticResource LblEntry}" />
-                    <Entry IsPassword="True" Style="{StaticResource Entry}" x:Name="EntConfSenha" Text="{Binding ConfirmPassword}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25"/>
-
+                    <Border MaximumWidthRequest="250" MinimumWidthRequest="150">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="5" />
+                        </Border.StrokeShape>
+                        <Entry IsPassword="True" Style="{StaticResource Entry}" x:Name="EntConfSenha" Text="{Binding ConfirmPassword}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25"/>
+                    </Border>
                     <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" ContentLayout="Left, 10"
                             Command="{Binding AddUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" >
                     <Button.ImageSource>
