--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -4,21 +4,35 @@
              x:Class="Bookshelf.Views.UpdatePassword"
              Style="{StaticResource ContentPage}" 
              xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+             xmlns:vm="clr-namespace:Bookshelf.ViewModels"
+             x:DataType="vm:UpdatePasswordVM"
+             xmlns:components = "clr-namespace:Bookshelf.Components"
              Title="Recuperar senha" >
-    <ContentPage.Content>
-        <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center" MaximumWidthRequest="500" >
-            <Frame Style="{ StaticResource MainFrame }">
+    <ScrollView HorizontalOptions="CenterAndExpand">
+        <StackLayout>
+            <Frame Style="{ StaticResource FramePrimary }" IsEnabled="{Binding IsNotBusy}">
                 <VerticalStackLayout>
-                    <Label Text="Email" Style="{StaticResource LblEntry}"/>
-                    <Entry Text="{Binding Email}" MaxLength="400" Style="{StaticResource Entry}" MaximumWidthRequest="350" MinimumWidthRequest="250"/>
-                    <Button Text="Enviar Email de Alteração de Senha" x:Name="BtnConfirmar" Style="{StaticResource MainBtn}" Command="{Binding UpdatePasswordCommand}" Margin="0,10,0,5"
-                             FontSize="10" ContentLayout="Left, 20" >
+                    <components:BorderedEntry Text="{Binding Email}" LabelText="Email"/>
+                    <Button Text="Enviar Email"
+                            Style="{StaticResource ButtonPrimary}" 
+                            Command="{Binding UpdatePasswordCommand}" 
+                            Margin="0,10,0,10"                             
+                            FontSize="20" ContentLayout="Left, 20" >
                         <Button.ImageSource>
-                            <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.Envelope}" Size="15"></FontImageSource>
+                            <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.Envelope}" Size="15"/>
                         </Button.ImageSource>
                     </Button>
+                    <Label Text="*Será enviado um email com um link para a atualização de sua senha."
+                       VerticalOptions="End"
+                       HorizontalOptions="End"
+                       FontFamily="OpenSansRegular"
+                       TextColor="{StaticResource Gray100}"
+                       FontSize="10"
+                       FontAttributes="Italic"
+                       Margin="0,20,0,0"
+                       />
                 </VerticalStackLayout>
             </Frame>
-        </VerticalStackLayout>
-    </ContentPage.Content>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
